--- a/package.json
+++ b/package.json
@@ -1,24 +1,45 @@
 {
-  "name": "portfolio",
+  "name": "static-site-generator",
   "version": "1.0.0",
-  "private": true,
+  "description": "This is a minimal, but very flexible and powerful static site generator that is built around Express and LiquidJS.",
+  "main": "core/build.ts",
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
+    "dev": "npm-run-all --parallel dev:server dev:mix",
+    "build": "npm-run-all --sequential build:wipe build:mix build:site",
+    "dev:server": "ts-node-dev core/dev.ts",
+    "dev:mix": "mix watch",
+    "build:wipe": "ts-node core/util/wipe-dist.ts",
+    "build:site": "ts-node core/build.ts",
+    "build:mix": "mix --production"
   },
-  "dependencies": {
-    "@nuxt/content": "^1.14.0",
-    "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/pwa": "^3.3.5",
-    "core-js": "^3.15.1",
-    "functionalities.js": "^0.3.1",
-    "nuxt": "^2.15.7"
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@nuxtjs/style-resources": "^1.2.1",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.1"
+    "@types/cli-color": "^2.0.2",
+    "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
+    "@types/html-minifier-terser": "^7.0.0",
+    "@types/lodash.merge": "^4.6.7",
+    "@types/markdown-it": "^12.2.3",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^17.0.8",
+    "axios": "^0.27.2",
+    "cli-color": "^2.0.3",
+    "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
+    "html-minifier-terser": "^7.0.0",
+    "laravel-mix": "^6.0.49",
+    "liquidjs": "^9.42.0",
+    "lodash.merge": "^4.6.2",
+    "markdown-it": "^13.0.1",
+    "morgan": "^1.10.0",
+    "npm-run-all": "^4.1.5",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.54.8",
+    "sass-loader": "^12.6.0",
+    "ts-loader": "^9.3.1",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.2"
   }
 }
