--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "@functionalities/toggler": "^1.0.0"
   }
 }
