--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "@functionalities/toggler": "^1.0.0"
+    "@functionalities/animations": "^1.0.0",
+    "@functionalities/toggler": "^1.1.1"
   }
 }
