--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "build:site": "ts-node core/build.ts",
     "build:mix": "mix --production"
   },
+  "engines": {
+    "npm": ">=8.0.0",
+    "node": ">=18.0.0"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -23,6 +27,8 @@
     "@types/markdown-it": "^12.2.3",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.8",
+    "@types/sharp": "^0.31.0",
+    "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
     "cli-color": "^2.0.3",
     "express": "^4.17.1",
@@ -37,13 +43,15 @@
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.54.8",
     "sass-loader": "^12.6.0",
+    "sharp": "^0.31.0",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "uuid": "^9.0.0"
   },
   "dependencies": {
     "@functionalities/animations": "^1.0.0",
-    "@functionalities/toggler": "^1.1.1"
+    "@functionalities/toggler": "^1.2.0"
   }
 }
